# Neosearch

./: .gitignore  Dockerfile  Dockerfile.core  Dockerfile.crawler  Dockerfile.frontend  LICENSE  README.md  changelog.md  deploy_searxng_with_docker.sh  docker-compose.yaml
examples/ollama-deep-researcher/: .env.example  README.md  langgraph.json  pyproject.toml
neosearch/: .env.example  .env.template  .gitignore  README.md  components.json  config.yaml  generate.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  search_engines.toml  worker.py
neosearch-rs/: Cargo.toml
neosearch-rs/src/: main.rs
neosearch-rs/src/utils/: coco_classes.rs  imagenet.rs  mod.rs  token_output_stream.rs
neosearch/.meta/: pyproject.toml  requirements.txt
neosearch/ai/: __init__.py  sbert.py
neosearch/api/routers/: chat.py  health_check.py  query.py  search.py
neosearch/api/utils/: chat.py  query.py  rag_search.py
neosearch/app/: globals.css  layout.tsx  rag.py  server.py  settings.py  worker_broker.py
neosearch/app/(chat)/: page.tsx
neosearch/app/engine/: index.py  query_engine.py  utils.py
neosearch/app/middlewares/: request_id.py  request_logger.py
neosearch/app/settings/: __init__.py  llamacpp.py  ollama.py  openai.py
neosearch/app/utils/: configs.py  logging.py
neosearch/artifacts/code/: server.ts
neosearch/components/: app-sidebar.tsx  chat-header.tsx  model-selector.tsx  overview.tsx  submit-button.tsx
neosearch/components/styles/: colors.ts
neosearch/components/ui/: accordion.tsx  stock-screener-table.tsx
neosearch/constants/: bedrock.py  circuitbreaker.py  embeddings.py  logging.py  memory.py  queue.py  rag_search.py  retriever.py  searxng.py  trace.py
neosearch/datastore/: __init__.py  database.py
neosearch/datastore/crud/: chat.py  document.py  message.py  vote.py
neosearch/datastore/model/: base.py  chat.py  document.py  message.py  vote.py
neosearch/datastore/providers/: postgres.py
neosearch/datastore/vectorstores/: milvus_vector_stores.py  pg_vector_stores.py  pgrs_vector_stores.py  qdrant_vector_stores.py
neosearch/engine/: db_utils.py  index.py  utils.py
neosearch/engine/agents/: deep_research.py  research.py
neosearch/engine/prompts/: chat.py  crag_workflow.py  deep_research.py  search_o1.py
neosearch/engine/rag_engine/: chat_engine.py  query_engine.py
neosearch/engine/reranker/: cohere.py
neosearch/engine/retriever/: base.py  bm25_hybrid.py  keyword_hybrid.py  paradedb.py  searxng.py  searxng_retriever.py
neosearch/engine/search/: bing_search.py
neosearch/engine/utils/: query.py  rag_search.py  searxng.py
neosearch/engine/vectorstores/: base.py  milvus_vector_stores.py  pg_vector_stores.py  pgrs_vector_stores.py
neosearch/engine/workflow/: crag.py  deep_research.py
neosearch/exceptions/: bedrock.py
neosearch/exceptions/engine/: retriever.py
neosearch/infrastructure/aws/: bedrock_adapter.py  s3_adapter.py
neosearch/lib/: utils.ts
neosearch/lib/agents/: generate-related-questions.ts  manual-researcher.ts  researcher.ts
neosearch/lib/ai/: models.test.ts  providers.ts
neosearch/lib/api/: stock-filters.ts
neosearch/lib/config/: models.ts
neosearch/lib/schema/: search.tsx
neosearch/lib/search_utils/: registry.ts
neosearch/lib/streaming/: handle-stream-finish.ts  (+3 more)
neosearch/middlewares/: request_id.py
neosearch/models/: __init__.py  chat_models.py  query_models.py
neosearch/neosearch/: main.py  mypy.ini
neosearch/response/: chat.py
neosearch/search_components/: clear-history.tsx  collapsible-message.tsx  empty-screen.tsx  header.tsx  history-item.tsx  history.tsx  message.tsx  model-selector.tsx  retrieve-section.tsx  search-mode-toggle.tsx  search-results-image.tsx  search-results.tsx  search-section.tsx  section.tsx  video-search-results.tsx
neosearch/services/: file.py  next_question_suggesion.py
neosearch/settings/: __init__.py  fastembed.py  gemini.py  huggingface.py  llmhub.py  mistral.py  ollama.py  openai.py
neosearch/utils/: constants.py  events.py  gc_tuning.py  logging.py  ray.py
neosearch_ai/: README.md  embedding.py  flashrerank.py  main.py  pyproject.toml
neosearch_ai/configs/: app.py  embedding_param_manager.py  reranker_param_manager.py
neosearch_ai/constants/: logging.py
neosearch_ai/engine/: embeddings.py  flash_reranker.py  param_manager.py  reranker.py
neosearch_ai/utils/: logger.py  singleton.py
neosearch_crawler/: .env.sample  .gitignore  known_urls.txt  main.py  pyproject.toml  sample_crawler.py
neosearch_crawler/constants/: __init__.py  crawl_seeds.py  modes.py
neosearch_crawler/crawlers/: github.py  linkedin.py  medium.py
neosearch_crawler/dispatchers/: lib.py
neosearch_crawler/engine/: base_dispatcher.py
neosearch_crawler/mongo_db/: documents.py  mongo.py
neosearch_crawler/utils/: domain_name_utils.py  logger.py  pdf_util.py  trafilatura_util.py
neosearch_llm/: deploy_sgllm_docker.sh  launch_local_model_with_sgllm.sh  launch_local_model_with_sgllm_poetry.sh  pyproject.toml
neosearch_llm/sglang/: launch_sgllm.sh  launch_sgllm_tensor_parallel.sh  pyproject.toml
neosearch_llm/vllm/: inference.py  launch_vllm.sh  pyproject.toml  run_with_ray_cluster.md
ray_crawler/: main.py  pyproject.toml  sample_offline_rag_for_web_search_agent.py
ray_crawler/constants/: logger.py
ray_crawler/crawlers/: base.py  github.py  linkedin.py  medium.py
ray_crawler/data/: README.md
ray_crawler/db/: documents.py
ray_crawler/dispatchers/: lib.py
ray_crawler/engine/: base_dispatcher.py  deployment.py  embeddings.py
ray_crawler/mongo_db/: documents.py
ray_crawler/utils/: __init__.py  logger.py  singleton.py  trafilatura_util.py
samples/bi_encoding_sbert/: README.md  pyproject.toml
samples/clip-search/: pyproject.toml  requirements.txt
samples/faiss_semantic_similarity/: pyproject.toml
samples/semantic-search-fastapi/: README.md  pyproject.toml  requirements.txt
src/: pyproject.toml  requirements.txt
src/frontend/: package.json
src/neosearch/: .env.template  app.py  config.yaml  generate.py  main.py  pyproject.toml
(+327 files in other folders)
