[package]
name = "neosearch-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accelerate-src = "0.3.2"
anyhow = "1.0.75"
candle = "0.0.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.1", features = ["cuda"] }
candle-datasets = "0.3.1"
candle-flash-attn = "0.3.1"
candle-nn = "0.3.1"
candle-onnx = "0.3.1"
candle-transformers = "0.3.1"
cudarc = "0.9.15"
intel-mkl-src = "0.8.1"
pyo3 = "0.20.0"
safetensors = "0.4.0"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
