[package]
name = "neosearch-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-pyo3 = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
clap = "4.4.8"
hf-hub = "0.3.2"
image = "0.24.7"
safetensors = "0.4.0"
serde = "1.0.192"
serde_json = "1.0.108"
tokenizers = "0.14.1"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
