[tool]
[tool.poetry]
name = "neosearch"
version = "0.1.17"
description = ""
authors = [ "Yeonwoo Sung <neos960518@gmail.com>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.115.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
llama-index = "0.10.59"
llama-index-core = "0.10.59"
llama-index-vector-stores-milvus = "^0.1.22"
llama-index-llms-ollama = "^0.2.2"
llama-index-embeddings-huggingface = "^0.1.4"
llama-index-llms-llama-cpp = "^0.1.3"
llama-index-vector-stores-pgvecto-rs = "^0.1.2"
llama-index-vector-stores-postgres = "0.1.14"
llama-index-vector-stores-pinecone = "^0.1.3"
llama-index-retrievers-bm25 = "^0.1.3"
pgvecto-rs = {extras = ["sdk"], version = "^0.1.4"}
slowapi = "^0.1.9"
traceloop-sdk = "^0.26.3"
orjson = "^3.10.6"
jinja2 = "^3.1.4"
boto3 = "^1.35.54"
botocore = "^1.35.54"
uvicorn = "^0.32.0"


[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
