[tool]
[tool.poetry]
name = "neosearch"
version = "0.2.2"
description = ""
authors = [ "Yeonwoo Sung <neos960518@gmail.com>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.115.6"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
llama-index = "0.12.1"
llama-index-core = "0.12.1"
llama-index-vector-stores-milvus = "0.3.0"
llama-index-llms-ollama = "0.4.1"
llama-index-embeddings-huggingface = "0.4.0"
llama-index-vector-stores-pgvecto-rs = "0.3.0"
llama-index-vector-stores-postgres = "0.3.1"
llama-index-retrievers-bm25 = "0.5.0"
pgvecto-rs = {extras = ["sdk"], version = "^0.1.4"}
slowapi = "^0.1.9"
traceloop-sdk = "^0.26.3"
orjson = "^3.10.6"
jinja2 = "^3.1.5"
boto3 = "^1.35.54"
botocore = "^1.35.54"
uvicorn = "^0.32.0"
pybreaker = "^1.2.0"
aiobreaker = "^1.2.0"
llama-index-llms-openai = "^0.3.2"
pydantic = "<2.10"
llama-index-embeddings-openai = "^0.3.0"
llama-index-agent-openai = "^0.4.0"
aiostream = "^0.6.4"


[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
