[tool]
[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Yeonwoo Sung", email = "neos960518@gmail.com"},
]
requires-python = "<3.13,>=3.10"
dependencies = [
    "fastapi==0.115.6",
    "python-dotenv<2.0.0,>=1.0.0",
    "pyyaml<7.0.0,>=6.0.1",
    "llama-index==0.12.23",
    "llama-index-core==0.12.23",
    "llama-index-vector-stores-milvus==0.3.0",
    "llama-index-llms-ollama==0.4.1",
    "llama-index-embeddings-huggingface==0.4.0",
    "llama-index-vector-stores-pgvecto-rs==0.3.0",
    "llama-index-vector-stores-postgres==0.3.1",
    "llama-index-retrievers-bm25==0.5.0",
    "pgvecto-rs[sdk]<1.0.0,>=0.1.4",
    "slowapi<1.0.0,>=0.1.9",
    "traceloop-sdk<1.0.0,>=0.26.3",
    "orjson<4.0.0,>=3.10.6",
    "jinja2<4.0.0,>=3.1.5",
    "boto3<2.0.0,>=1.35.54",
    "botocore<2.0.0,>=1.35.54",
    "uvicorn<1.0.0,>=0.32.0",
    "pybreaker<2.0.0,>=1.2.0",
    "aiobreaker<2.0.0,>=1.2.0",
    "llama-index-llms-openai<1.0.0,>=0.3.2",
    "pydantic<2.10",
    "llama-index-embeddings-openai<1.0.0,>=0.3.0",
    "llama-index-agent-openai<1.0.0,>=0.4.0",
    "aiostream<1.0.0,>=0.6.4",
    "llama-index-tools-wikipedia<1.0.0,>=0.3.0",
    "llama-index-tools-tavily-research<1.0.0,>=0.3.0",
    "llama-index-postprocessor-cohere-rerank<1.0.0,>=0.3.0",
    "uuid7<1.0.0,>=0.1.0",
    "uvloop<1.0.0,>=0.21.0",
    "sqlmodel<1.0.0,>=0.0.22",
    "pdfplumber<1.0.0,>=0.11.5",
    "ray[default]>=2.43.0",
    "faststream[kafka,redis]>=0.5.35",
    "aiokafka>=0.12.0",
    "aioredis>=2.0.1",
    "llama-index-llms-anthropic>=0.6.10",
    "llama-index-embeddings-ollama>=0.6.0",
]
name = "neosearch"
version = "0.2.15"
description = "RAG search engine done right"
readme = "README.md"
