[tool.poetry]
name = "neosearch_crawler"
version = "0.1.7"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ray = {extras = ["serve"], version = "^2.10.0"}
trafilatura = "^1.8.1"
langchain = "^0.3.0"
llama-index-core = "0.10.59"
llama-index = "0.10.59"
llama-index-llms-openai = "^0.1.27"
llama-index-llms-replicate = "^0.1.3"
llama-index-embeddings-huggingface = "^0.2.2"
aws-lambda-powertools = "^3.0.0"
selenium = "^4.25.0"
pymongo = "^4.9.1"
pydantic-settings = "^2.6.0"
scrapy = "^2.12.0"
mypy-boto3-s3 = "^1.35.67"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
