# [tool.pdm.build]
# includes = []
# [build-system]
# requires = ["pdm-backend"]
# build-backend = "pdm.backend"


[project]
authors = [
    {name = "YeonwooSung", email = "neos960518@gmail.com"},
]
requires-python = "<3.13,>=3.10"
dependencies = [
    "ray[serve]<3.0.0,>=2.10.0",
    "trafilatura[all]==1.8.0",
    "langchain==0.3.19",
    "llama-index-core==0.12.19",
    "llama-index==0.12.21",
    "llama-index-llms-openai==0.3.20",
    "llama-index-llms-replicate==0.4.0",
    "llama-index-embeddings-huggingface==0.5.1",
    "aws-lambda-powertools<4.0.0,>=3.0.0",
    "selenium>=4.25.0,<5.0.0",
    "pymongo<5.0.0,>=4.9.1",
    "pydantic-settings<3.0.0,>=2.6.0",
    "scrapy<3.0.0,>=2.12.0",
    "mypy-boto3-s3<2.0.0,>=1.35.67",
    "polars>=1.18.0,<2.0.0",
    "scrapegraphai<2.0.0,>=1.37.1",
    "sqlmodel>=0.0.23",
    "psycopg2>=2.9.10",
    "asyncpg>=0.30.0",
    "requests>=2.32.3",
    "pypdf2>=3.0.1",
]
name = "neosearch_crawler"
version = "0.2.1"
description = ""
readme = "README.md"
