[tool.poetry]
name = "neosearch-llm"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
sglang = {extras = ["all"], version = "^0.2.14.post2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
