[tool.poetry]
name = "ray_crawler"
version = "0.1.2"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ray = {extras = ["serve"], version = "^2.10.0"}
trafilatura = "^1.8.1"
langchain = "^0.1.15"
llama-index-core = "0.10.59"
llama-index = "0.10.59"
llama-index-llms-openai = "^0.1.27"
llama-index-llms-replicate = "^0.1.3"
llama-index-embeddings-huggingface = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
