[tool.poetry]
name = "neosearch"
version = "0.1.0"
description = "Multimodal semantic search engine for \"NEOS\""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
pyspark = "^3.4.1"
transformers = "^4.30.2"
tokenizers = "^0.13.3"
slowapi = "^0.1.8"
ray = {extras = ["serve"], version = "^2.7.0"}
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
