[project]
authors = [
    {name = "YeonwooSung", email = "neos960518@gmail.com"},
]
requires-python = "<3.13,>=3.10"
dependencies = [
    "vllm>=0.6.2,<1.0.0",
    "torch==2.7.0",
    "accelerate<2.0.0,>=1.0.0",
    "fire<1.0.0,>=0.7.0",
]
name = "neosearch_vllm"
version = "0.1.0"
description = "vLLM server for neosearch"
readme = "README.md"
