[tool.poetry]
name = "bi-encoding-sbert"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "bi_encoding_sbert"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
transformers = "^4.36.2"
sentence-transformers = "^2.2.2"
datasets = "^2.14.5"
accelerate = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
