[tool.poetry]
name = "faiss-semantic-similarity"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "faiss_semantic_similarity"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
matplotlib = "^3.7.2"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
